@@ -1,6 +1,6 @@
 Package: multcomp
 Title: Simultaneous Inference in General Parametric Models
-Version: 1.1-0
+Version: 1.1-1
 Date: 2009-06-08
 Author: Torsten Hothorn, Frank Bretz and Peter Westfall with
   contributions by Richard M. Heiberger and Andre Schuetzenmeister
