@@ -1,5 +1,10 @@
 
 
+		CHANGES in `multcomp' VERSION 1.1-1
+
+    o    better handling of model.frames in `cld'
+
+
 		CHANGES in `multcomp' VERSION 1.1-0
 
     o    new compact letter displays
